--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HaxMC's Planet</title>
 </head>
 <body>
-    <div class="overlay" id="overlay">Click anywhere to enter</div>
+    <div class="overlay" id="overlay">Click here to enter</div>
     
     <div class="main" style="display: none;"></div>
     <div class="container" style="display: none;">
